add readme and activate numbers option

--- a/lib/password_generator_web/templates/page/index.html.heex
+++ b/lib/password_generator_web/templates/page/index.html.heex
@@ -27,6 +27,15 @@
       </div>
       <div class="row">
         <div class="column">
+          <%= label f, :numbers, "Include Numbers Characters: " %>
+        </div>
+        <div class="column">
+          <%= checkbox f, :numbers %>
+            (e.g. 1465987)
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
           <%= label f, :symbols, "Include Symbols Characters: " %>
         </div>
         <div class="column">
